--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -35,11 +35,11 @@ jobs:
     - name: SSH and deploy node app
       uses: JimCronqvist/action-ssh@master
       with:
-        host: ${{ secrets.SSH_HOST }}
-        username: ${{ secrets.SSH_USERNAME }}
-        key: ${{ secrets.SSH_KEY }}
-        port: ${{ secrets.SSH_PORT }}
-        script: |
+        hosts: ${{ secrets.SSH_HOST }}
+        # username: ${{ secrets.SSH_USERNAME }}
+        privateKey: ${{ secrets.SSH_KEY }}
+        # port: ${{ secrets.SSH_PORT }}
+        command: |
           cd ~/node-github-demo
           git pull origin master
           npm install --production
