--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -40,7 +40,7 @@ jobs:
         privateKey: ${{ secrets.SSH_KEY }}
         # port: ${{ secrets.SSH_PORT }}
         command: |
-          cd ~/node-github-demo
+          cd ~/node-app-github-actions
           git pull origin master
           npm install --production
           pm2 restart node-app
