--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -43,4 +43,4 @@ jobs:
           cd ~/node-app-github-actions
           git pull origin master
           npm install --production
-          pm2 restart node-app
+          pm2 restart index
